# spool

./: .gitignore  404.html  HISTORY.md  Makefile  README.md  README.rst  fail.yml  index.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  main.yml  pythonapp.yml
api/: index.html
changelog/: index.html
docs/: api.md  examples.md  index.md  installation.md  reference.md
examples/: antivirus.txt  attachments.yml  bad_file_types.yml  blacklist.yml  bounce.yml  dkim.dns  dkim.key  dkim.yml  html.yml  ical.yml  iframe.yml  index.html  mailing_list.yml  malware.yml  ole_objects.yml  reply_to.yml  simple.yml  smime.yml  spam.yml  spf.yml  spoofing.yml  xss.yml  zkb_log_mail_headers.yml
examples/malware/: eicar.rar
examples/smime/: recipient.crt.pem  sender.crt.pem  sender.key.pem
hermodr/: filters.py  mailer.py  main.py  parser.py
installation/: index.html
mailman/: exceptions.py  mailer.py  main.py  message.py  parser.py
quickstart/: index.html
reference/: index.html
search/: search_index.json
spool/: exceptions.py  gpg.py  mailer.py  main.py  message.py  parser.py  smime.py
test/: test_parser.py
tests/: conftest.py  data_message.yml  test_integration.py  test_mailer.py  test_main.py  test_message.py  test_parser.py  test_smime.py
