[metadata]
name = spool
author = Daniel Besmer
author_email = besmerd@gmail.com
version = 0.8.1
license = BSD-3-Clause
license_files = LICENSE.rst
keywords = email, mailer
description = Send mails with yaml
project_urls =
    Documentation = https://besmerd.github.io/spool
    Code = https://github.com/besmerd/spool
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
packages = find:
install_requires =
    M2Crypto
    cerberus
    dkimpy
    jinja2
    pyyaml
include_package_data = true
python_requires = >=3.6
use_scm_version = true

[options.packages.find]
exclude =
    docs
    examples
    tests

[options.extras_require]
install =
    setuptools_scm
dev =
    mkdocs
    mkdocs-material
test =
    pytest

[options.entry_points]
console_scripts =
    spool=spool.main:cli

[bdist_wheel]


[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = .

[coverage:report]
show_missing = True

[isort]
skip = .eggs,.tox,docs,venv
not_skip = __init__.py

[tox:tox]
minversion = 3.4.0
requires = tox-venv
envlist =
    py{36,37,38}
    pep8
skipsdist = True

[flake8]
exclude = .eggs,.tox,docs,venv

[testenv]
deps = -r requirements.txt
commands = pytest

[testenv:pep8]
commands = flake8
deps = flake8

[testenv:lint]
basepython = python3.6
commands = pylint --rcfile=setup.cfg ./spool
deps = -r requirements.txt

[pylint]
disable = C0103
output-format = colorized
